# ai_agent_ex_202601

./: .gitignore  AGENT_FRAMEWORK_GUIDE.md  CHANGES_SUMMARY.md  CREWAI_FIX.md  FINAL_FIX.md  PROGRESS_TRACKING.md  README.md  TESTING.md  TOOL_CONFLICT_FIX.md  TROUBLESHOOTING.md  test_system.py
backend/: .gitignore  main.py  progress_tracker.py  pyproject.toml  requirements.txt  test_api_call.py  test_crewai.py  test_langgraph.py
backend/crewai_/: __init__.py  crewai_agent.py  stock_analysis_tool.py
backend/langgraph_/: __init__.py  langgraph_agent.py  stock_analysis_tool.py
docs/: 설계내용.pptx  프롬프트.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
